--- a/index.html
+++ b/index.html
@@ -1,2 +1,49 @@
-<html>
+<html lang="en-us">
+<head>
+    <script>
+        (function (d) {
+            var config = {
+                    kitId: 'zpc6uhi',
+                    scriptTimeout: 3000,
+                    async: true
+                },
+                h = d.documentElement, t = setTimeout(function () {
+                    h.className = h.className.replace(/\bwf-loading\b/g, "") + " wf-inactive";
+                }, config.scriptTimeout), tk = d.createElement("script"), f = false,
+                s = d.getElementsByTagName("script")[0], a;
+            h.className += " wf-loading";
+            tk.src = 'https://use.typekit.net/' + config.kitId + '.js';
+            tk.async = true;
+            tk.onload = tk.onreadystatechange = function () {
+                a = this.readyState;
+                if (f || a && a != "complete" && a != "loaded") return;
+                f = true;
+                clearTimeout(t);
+                try {
+                    Typekit.load(config)
+                } catch (e) {
+                }
+            };
+            s.parentNode.insertBefore(tk, s)
+        })(document);
+    </script>
+    <link rel="stylesheet" href="style.css">
+    <title>&#10063; timzki</title>
+    <meta charset="utf-8">
+</head>
+<body>
+<h1 style="font-size: 100px">timzki</h1>
+<img src="images/neko%20arc.png" alt="Neko Arc Picture" id="Neko">
+<div>
+    <p>This is supposed to be a website</p>
+    <a href="https://www.instagram.com/lordtimzki/" target="_blank">
+        <img src="images/instagram.svg" alt="instagram" class="socials">
+    </a><a href="https://twitter.com/LordTimzki" target="_blank">
+    <img src="images/twitter.svg" alt="twitter" class="socials">
+</a><a href="https://myanimelist.net/profile/timzki" target="_blank">
+    <img src="images/myanimelist.svg" alt="mal" class="socials">
+</a>
+</div>
+</body>
+
 </html>
