--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="en-us">
 <head>
     <link rel="stylesheet" href="style.css">
-    <script>
+    <script format="ttf">
         (function (d) {
             var config = {
                     kitId: 'zpc6uhi',
