--- a/index.html
+++ b/index.html
@@ -1,21 +1,12 @@
 <html lang="en-us">
 <head>
     <link rel="stylesheet" href="style.css">
-    <script>
-        (function(d) {
-            var config = {
-                    kitId: 'jcn7mkv',
-                    scriptTimeout: 3000,
-                    async: true
-                },
-                h=d.documentElement,t=setTimeout(function(){h.className=h.className.replace(/\bwf-loading\b/g,"")+" wf-inactive";},config.scriptTimeout),tk=d.createElement("script"),f=false,s=d.getElementsByTagName("script")[0],a;h.className+=" wf-loading";tk.src='https://use.typekit.net/'+config.kitId+'.js';tk.async=true;tk.onload=tk.onreadystatechange=function(){a=this.readyState;if(f||a&&a!="complete"&&a!="loaded")return;f=true;clearTimeout(t);try{Typekit.load(config)}catch(e){}};s.parentNode.insertBefore(tk,s)
-        })(document);
-    </script>
+    <link rel="stylesheet" href="https://use.typekit.net/nuq3qmj.css">
     <title>&#10063; timzki</title>
     <meta charset="utf-8">
 </head>
 <body>
-<h1 style="font-size: 100px;font-family: 'FOT-Chiaro Std',sans-serif">timzki</h1>
+<h1 id="Header">timzki</h1>
 <img src="images/neko%20arc.png" alt="Neko Arc Picture" id="Neko">
 <div>
     <p>This is supposed to be a website</p>
