--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
+<!DOCTYPE html>
 <html lang="en-us">
 <head>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://use.typekit.net/nuq3qmj.css">
     <title>&#10063; timzki</title>
     <meta charset="utf-8">
 </head>
