--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en-us">
 <head>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://use.typekit.net/nuq3qmj.css">
     <link rel="icon" type="image/x-icon" href="images/apple-touch-icon.png">
     <title>&#10063; timzki</title>
     <meta charset="utf-8">
