--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 <img src="images/neko%20arc.png" alt="Neko Arc Picture" id="Neko">
 <div>
     <p>This is supposed to be a website</p>
-    <a href="https://www.instagram.com/lordtimzki/" target="_blank">
+    <a href="https://www.instagram.com/lordtimzki/" style="text-decoration: none" target="_blank">
         <img src="images/instagram.svg" alt="instagram" class="socials">
-    </a><a href="https://twitter.com/LordTimzki" target="_blank">
+    </a><a href="https://twitter.com/LordTimzki" style="text-decoration: none" target="_blank">
     <img src="images/twitter.svg" alt="twitter" class="socials">
-</a><a href="https://myanimelist.net/profile/timzki" target="_blank">
+</a><a href="https://myanimelist.net/profile/timzki" style="text-decoration: none" target="_blank">
     <img src="images/myanimelist.svg" alt="mal" class="socials">
 </a>
 </div>
