removed ugly cat and changed looks

--- a/index.html
+++ b/index.html
@@ -1,25 +1,78 @@
 <!DOCTYPE html>
-<html lang="en-us">
-<head>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://use.typekit.net/nuq3qmj.css">
-    <link rel="icon" type="image/x-icon" href="images/apple-touch-icon.png">
-    <title>&#10063; timzki</title>
-    <meta charset="utf-8">
-</head>
-<body>
-<h1 id="Header">timzki</h1>
-<img src="images/neko%20arc.png" alt="Neko Arc Picture" id="Neko">
-<div>
-    <p>This is supposed to be a website</p>
-    <a href="https://www.instagram.com/lordtimzki/" style="text-decoration: none" target="_blank">
-        <img src="images/instagram.svg" alt="instagram" class="socials">
-    </a><a href="https://twitter.com/LordTimzki" style="text-decoration: none" target="_blank">
-    <img src="images/twitter.svg" alt="twitter" class="socials">
-</a><a href="https://myanimelist.net/profile/timzki" style="text-decoration: none" target="_blank">
-    <img src="images/myanimelist.svg" alt="mal" class="socials">
-</a>
-</div>
-</body>
+<html lang="en">
+  <head>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400&family=Ubuntu&display=swap"
+      rel="stylesheet"
+    />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>timzki</title>
+  </head>
+  <body>
+    <h1 class="hello">timzki</h1>
+    <nav>
+      <a
+        class="nav-text"
+        href="https://www.instagram.com/lordtimzki/"
+        target="_blank"
+        >Instagram</a
+      >
 
+      <a
+        class="nav-text"
+        href="https://www.linkedin.com/in/timdac/"
+        target="_blank"
+        >LinkedIn</a
+      >
+
+      <a
+        class="nav-text"
+        href="https://www.myanimelist.com/profile/timzki"
+        target="_blank"
+        >MyAnimeList</a
+      >
+    </nav>
+  </body>
 </html>
+
+<!-- <!DOCTYPE html>
+<html lang="en-us">
+  <head>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="https://use.typekit.net/nuq3qmj.css" />
+    <link rel="icon" type="image/x-icon" href="images/apple-touch-icon.png" />
+    <title>&#10063; timzki</title>
+    <meta charset="utf-8" />
+  </head>
+  <body>
+    <h1 id="Header">timzki</h1>
+    <img src="images/neko%20arc.png" alt="Neko Arc Picture" id="Neko" />
+    <div>
+      <p>This is supposed to be a website</p>
+      <a
+        href="https://www.instagram.com/lordtimzki/"
+        style="text-decoration: none"
+        target="_blank"
+      >
+        <img src="images/instagram.svg" alt="instagram" class="socials" /> </a
+      ><a
+        href="https://twitter.com/LordTimzki"
+        style="text-decoration: none"
+        target="_blank"
+      >
+        <img src="images/twitter.svg" alt="twitter" class="socials" /> </a
+      ><a
+        href="https://myanimelist.net/profile/timzki"
+        style="text-decoration: none"
+        target="_blank"
+      >
+        <img src="images/myanimelist.svg" alt="mal" class="socials" />
+      </a>
+    </div>
+  </body>
+</html> -->
