fixed myanimelist.com to .net

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
       <a
         class="nav-text"
-        href="https://www.myanimelist.com/profile/timzki"
+        href="https://www.myanimelist.net/profile/timzki"
         target="_blank"
         >MyAnimeList</a
       >
