minor address change

--- a/index.html
+++ b/index.html
@@ -18,21 +18,18 @@
     <nav>
       <a
         class="nav-text"
-        href="https://www.instagram.com/lordtimzki/"
+        href="https://instagram.com/lordtimzki/"
         target="_blank"
         >Instagram</a
       >
 
-      <a
-        class="nav-text"
-        href="https://www.linkedin.com/in/timdac/"
-        target="_blank"
+      <a class="nav-text" href="https://linkedin.com/in/timdac/" target="_blank"
         >LinkedIn</a
       >
 
       <a
         class="nav-text"
-        href="https://www.myanimelist.net/profile/timzki"
+        href="https://myanimelist.net/profile/timzki"
         target="_blank"
         >MyAnimeList</a
       >
